--- a/index.html
+++ b/index.html
@@ -6,5 +6,32 @@
     <title>JOURNEY JOY</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header>
+      <!-- navbar -->
+      <nav>
+        <div class="nav-content">
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <p class="nav-title">Journey <span>Joy</span></p>
+        </div>
+        <i class="fa-solid fa-bars menu-icon"></i>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Packages</a></li>
+          <li><a href="">Testimonial</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- main -->
+    <main></main>
+    <!-- footer -->
+    <footer></footer>
+  </body>
+  <script
+    src="https://kit.fontawesome.com/c00fb4165f.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
