completed the destination section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <div class="nav-content">
           <img src="Images/Group 40071 (2).png" alt="" />
-          <p class="nav-title">Journey <span>Joy</span></p>
+          <h1 class="nav-title">Journey <span>Joy</span></h1>
         </div>
         <i class="fa-solid fa-bars menu-icon"></i>
         <ul>
@@ -24,9 +24,113 @@
           <li><a href="">Contact</a></li>
         </ul>
       </nav>
+      <!-- banner section -->
+      <section class="banner">
+        <h2 class="banner-title">Explore Your Travel</h2>
+        <p class="banner-description">
+          Embark on a world travel with Journey Joy. planning now and make every
+          moment a chapter in your own travel story with Journey Joy.
+        </p>
+
+        <form action="">
+          <input type="text" class="form-inputs" placeholder="Where go" />
+          <select class="form-inputs" placeholder>
+            <option value="" disabled selected hidden>When</option>
+            <option value="am">AM</option>
+            <option value="pm">PM</option>
+          </select>
+          <select class="form-inputs" placeholder>
+            <option value="" disabled selected hidden>Select Type</option>
+            <option value="am">AM</option>
+            <option value="pm">PM</option>
+          </select>
+
+          <button class="btn-primary">
+            <i class="fa-solid fa-magnifying-glass"></i> Find Now
+          </button>
+        </form>
+      </section>
     </header>
     <!-- main -->
-    <main></main>
+    <main>
+      <!-- our popular section -->
+      <section class="our-popular">
+        <div class="our-popular-content">
+          <h3 class="section-title">Our Popular Tours</h3>
+          <p class="section-descrption">
+            Escape to the serene embrace of towering peaks and breathtaking
+            landscapes with our mountain retreats. Immerse yourself in the
+          </p>
+          <ul>
+            <li class="section-descrption">
+              In the heart of these majestic peaks, a symphony of nature
+              unfolds, captivating every visitor with its timeless beauty. The
+              mountains stand as silent sentinels, whispering .
+            </li>
+            <li class="section-descrption">
+              Feel the thrill of adventure as you navigate winding trails that
+              lead to panoramic vistas. Crisp mountain air fills your lungs, .
+            </li>
+            <li class="section-descrption">
+              Experience the magic of changing landscapes as you ascend through
+              diverse ecosystems. From lush foothills adorned with wildflowers
+              to the pristine,
+            </li>
+          </ul>
+          <p class="section-descrption">
+            For the adrenaline enthusiasts, engage in exhilarating activities
+            such as mountain trekking, rock climbing, or zip-lining, while those
+          </p>
+
+          <button class="btn-primary">Read More</button>
+        </div>
+        <div class="our-popular-img">
+          <img src="Images/Rectangle 4.png" alt="" />
+        </div>
+      </section>
+      <!-- Choose Your Destination section -->
+      <section class="choose-destnation">
+        <div class="choose-destination-content">
+          <h3 class="section-title">Choose Your Destination</h3>
+          <p class="section-descrption">
+            From sun-kissed beaches to enchanting mountain retreats, our
+            platform empowers you to curate a tailor-made travel experience.
+            Your dream
+          </p>
+        </div>
+
+        <div class="choose-destnation-images">
+          <div class="destination-img maldives">
+            <p>Maldives</p>
+            <img src="Images/Rectangle 5.png" alt="" />
+          </div>
+          <div class="destination-img indonesia">
+            <p>Indonesia</p>
+            <img src="Images/Rectangle 8.png" alt="" />
+          </div>
+          <div class="destination-img srilanka">
+            <p>Srilanka</p>
+            <img src="Images/Rectangle 6.png" alt="" />
+          </div>
+          <div class="destination-img north-america">
+            <p>North America</p>
+            <img src="Images/Rectangle 7.png" alt="" />
+          </div>
+          <div class="destination-img kashmir">
+            <p>Kashmir</p>
+            <img src="Images/Rectangle 9.png" alt="" />
+          </div>
+          <div class="destination-img bangladesh">
+            <p>Bangladesh</p>
+            <img src="Images/Rectangle 11.png" alt="" />
+          </div>
+          <div class="destination-img bandarban">
+            <p>Bandarban</p>
+            <img src="Images/Rectangle 10.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer -->
     <footer></footer>
   </body>
