added Deals and discount section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,107 @@
           </div>
         </div>
       </section>
+      <!-- why choose Us -->
+      <section class="why-choose-us">
+        <h3 class="section-title">Why Choose Us</h3>
+        <p class="section-descrption">
+          . Immerse yourself in a user-friendly travel website that caters to
+          every wanderlust-filled heart. From destination guides and curated
+          transforms your travel dreams into reality.
+        </p>
+
+        <div class="why-choose-us-cards">
+          <div class="card-1 card">
+            <img src="Images/hotel 1.svg" alt="" />
+            <h4 class="card-title">Handpicked Hotels</h4>
+            <p class="card-description">
+              At our facility, we take pride in curating a selection of
+              exceptional accommodations that transcend the ordinary. Each hotel
+              is carefully chosen for its unique charm, exemplar
+            </p>
+          </div>
+          <div class="card-2 card">
+            <img src="Images/map 1.svg" alt="" />
+            <h4 class="card-title">World Class Service</h4>
+            <p class="card-description">
+              a lavish resort, or a charming bed-and-breakfast, our handpicked
+              hotels promise an unparalleled experience. Indulge in the art of
+              hospitality with accommodations that reflect our commitment to
+            </p>
+          </div>
+          <div class="card-3 card">
+            <img src="Images/price-tag 1.svg" alt="" />
+            <h4 class="card-title">Best Price Guarantee</h4>
+            <p class="card-description">
+              Your journey begins with us, where every stay is a curated
+              masterpiece, ensuring that your travel memories are as exceptional
+              as the destinations themselves.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- deals and discount section -->
+      <section class="deals-discount">
+        <h3 class="section-title">Deals & Discounts</h3>
+        <p class="section-descrption">
+          "Unlock the door to unbeatable savings and elevate your travel
+          experience with our exclusive deals and discounts.
+        </p>
+
+        <div class="deal-card">
+          <div class="card-content">
+            <div class="card-time">
+              <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+              <p><i class="fa-solid fa-people-group"></i> Max : 10</p>
+              <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
+            </div>
+            <h4 class="card-title">Tour To Satorini</h4>
+            <p class="card-description">
+              an enchanting blend of tradition and modernity, making it a
+              destination that lingers in your memories long after you leave its
+              sun-kissed shores.
+            </p>
+            <h5 class="card-price">Price: $1300-$1500</h5>
+            <button class="btn-primary">Book Now</button>
+          </div>
+        </div>
+
+        <div class="deal-card-2">
+          <div class="card-content-2">
+            <div class="card-time">
+              <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+              <p><i class="fa-solid fa-people-group"></i> Max : 10</p>
+              <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
+            </div>
+            <h4 class="card-title">Tour To Satorini</h4>
+            <p class="card-description">
+              an enchanting blend of tradition and modernity, making it a
+              destination that lingers in your memories long after you leave its
+              sun-kissed shores.
+            </p>
+            <h5 class="card-price">Price: $1300-$1500</h5>
+            <button class="btn-primary">Book Now</button>
+          </div>
+        </div>
+
+        <div class="deal-card">
+          <div class="card-content">
+            <div class="card-time">
+              <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+              <p><i class="fa-solid fa-people-group"></i> Max : 10</p>
+              <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
+            </div>
+            <h4 class="card-title">Tour To Satorini</h4>
+            <p class="card-description">
+              an enchanting blend of tradition and modernity, making it a
+              destination that lingers in your memories long after you leave its
+              sun-kissed shores.
+            </p>
+            <h5 class="card-price">Price: $1300-$1500</h5>
+            <button class="btn-primary">Book Now</button>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
