--- a/index.html
+++ b/index.html
@@ -230,6 +230,49 @@
             <button class="btn-primary">Book Now</button>
           </div>
         </div>
+        <div class="see-all-btn">
+          <button class="btn-primary">See All Packages</button>
+        </div>
+      </section>
+      <!-- perfect-place section -->
+      <section class="perfect-place">
+        <div class="perfect-place-content">
+          <h3 class="section-title">A Simple Perfect Place To Get Lost</h3>
+          <p class="section-descrption">
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+          </p>
+          <ul>
+            <li>
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+              porta lacus. Lectus suspendisse nullam.
+            </li>
+            <li>
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+              porta lacus. Lectus suspendisse nullam.
+            </li>
+          </ul>
+          <button class="btn-primary">See More</button>
+        </div>
+        <img src="Images/Group 40089.png" alt="" />
+      </section>
+      <!-- newsletter section -->
+      <section class="newsletter">
+        <div class="newsletter-content">
+          <h4>Newsletter</h4>
+          <p>Get your daily dose of travel news & tips. Sign up today!</p>
+          <hr />
+          <input type="text" placeholder="Enter your name" />
+          <input type="email" placeholder="Enter your email" />
+          <button class="btn-primary">Subscribe</button>
+        </div>
+        <div class="newsletter-img">
+          <img src="Images/Rectangle 8 (1).png" alt="" />
+          <div class="discount">
+            <p>Travel.com</p>
+            <h4>Save up to 70%</h4>
+          </div>
+        </div>
       </section>
     </main>
     <!-- footer -->
