--- a/index.html
+++ b/index.html
@@ -276,7 +276,26 @@
       </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <div class="footer-content">
+        <div class="footer-title">
+            <img src="Images/Group 40071 (2).png" alt="" />
+            <h1 class="nav-title">Journey <span>Joy</span></h1>
+        </div>
+        <p class="footer-description">
+            Connect with us for personalized assistance and let us turn your wanderlust into reality. Safe travels and may your next journey be filled with unforgettable moments. 
+        </p>
+
+        <div class="social">
+            <a href=""><i class="fa-brands fa-twitter"></i><a>
+            <a href=""><i class="fa-brands fa-facebook"></i><a>
+            <a href=""><i class="fa-brands fa-instagram"></i><a>
+            <a href=""><i class="fa-brands fa-github"></i><a>
+        </div>
+        <hr>
+        <p class="allright-reserved">2017, All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
   <script
     src="https://kit.fontawesome.com/c00fb4165f.js"
