added an extra ur most visited section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,42 @@
     </header>
     <!-- main -->
     <main>
+      <!-- our most visited place -->
+      <section class="our-most-visited-place">
+        <h3 class="section-title">Our Most Visited Place</h3>
+        <p class="section-descrption most-visited-description">
+          Discover iconic landmarks that stand as testaments to history,
+          culture, and architectural brilliance. From the awe-inspiring wonders
+          of the ancient world to modern marvels
+        </p>
+        <div class="most-visited-cards">
+          <div class="visited-card">
+            <img src="Images/bali.jpg" alt="" />
+            <h4 class="card-title">Bali</h4>
+          </div>
+          <div class="visited-card">
+            <img src="Images/paris.jpg" alt="" />
+            <h4 class="card-title">Paris</h4>
+          </div>
+          <div class="visited-card">
+            <img src="Images/maldives.jpg" alt="" />
+            <h4 class="card-title">Maldives</h4>
+          </div>
+          <div class="visited-card">
+            <img src="Images/kashmir (1).jpg" alt="" />
+            <h4 class="card-title">Kashmir</h4>
+          </div>
+          <div class="visited-card">
+            <img src="Images/cox-bazar.jpg" alt="" />
+            <h4 class="card-title">Cox Bazar</h4>
+          </div>
+          <div class="visited-card">
+            <img src="Images/sajek.jpg" alt="" />
+            <h4 class="card-title">Sajek</h4>
+          </div>
+        </div>
+      </section>
+
       <!-- our popular section -->
       <section class="our-popular">
         <div class="our-popular-content">
@@ -279,20 +315,21 @@
     <footer>
       <div class="footer-content">
         <div class="footer-title">
-            <img src="Images/Group 40071 (2).png" alt="" />
-            <h1 class="nav-title">Journey <span>Joy</span></h1>
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <h1 class="nav-title">Journey <span>Joy</span></h1>
         </div>
         <p class="footer-description">
-            Connect with us for personalized assistance and let us turn your wanderlust into reality. Safe travels and may your next journey be filled with unforgettable moments. 
+          Connect with us for personalized assistance and let us turn your
+          wanderlust into reality. Safe travels and may your next journey be
+          filled with unforgettable moments.
         </p>
-
         <div class="social">
-            <a href=""><i class="fa-brands fa-twitter"></i><a>
-            <a href=""><i class="fa-brands fa-facebook"></i><a>
-            <a href=""><i class="fa-brands fa-instagram"></i><a>
-            <a href=""><i class="fa-brands fa-github"></i><a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-github"></i></a>
         </div>
-        <hr>
+        <hr />
         <p class="allright-reserved">2017, All Rights Reserved.</p>
       </div>
     </footer>
